--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,5 +37,11 @@
     "files.insertFinalNewline": true,
     "files.trimTrailingWhitespace": true,
     "editor.semanticHighlighting.enabled": true,
-    "files.eol": "\n"
+    "files.eol": "\n",
+    "cSpell.words": [
+        "deadzone",
+        "teleop",
+        "teleoperated",
+        "wpilib"
+    ]
 }
