--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,7 @@
     "files.eol": "\n",
     "cSpell.words": [
         "deadzone",
+        "Mecanum",
         "teleop",
         "teleoperated",
         "wpilib"
