Import vision drivers from 2021ish code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,8 +40,10 @@
     "files.eol": "\n",
     "cSpell.words": [
         "deadzone",
+        "endregion",
         "teleop",
         "teleoperated",
+        "unsign",
         "wpilib"
     ]
 }
