Add Pov support to layouts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,7 @@
         "deadzone",
         "Gamepad",
         "Mecanum",
+        "povs",
         "teleop",
         "teleoperated",
         "wpilib"
